--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,8 @@
 
   /* Colors */
   --color-dark-1: #22544E;
+  --color-accent:#8E4F24;
+  --color-white:#ffffff;
   --color-dark-2: #262626;
   --color-dark-3: #333333;
   --color-dark-4: #555555;
@@ -511,6 +513,9 @@ a:hover {
 /*!========================================================================
  * 3. Backgrounds
  * ======================================================================!*/
+ .text-white{
+  color: var(--color-white)!important;
+ }
 .bg-dark-1 {
   background-color: var(--color-dark-1) !important;
 }
@@ -790,6 +795,11 @@ a:hover {
   border-color: var(--color-dark-1);
   color: var(--color-dark-1);
 }
+.button_bordered.button_accent {
+  border-color: var(--color-accent);
+  color: var(--color-accent);
+}
+
 
 /*!========================================================================
  * 7. Button Solid
@@ -799,6 +809,12 @@ a:hover {
   background-color: var(--color-dark-1);
   color: #fff;
 }
+.button_solid.button_accent {
+  border-color: var(--color-accent);
+  background-color: var(--color-accent);
+  color: #fff;
+}
+
 
 /*!========================================================================
  * 8. Change Text Hover
@@ -12717,7 +12733,7 @@ small, .small {
 
 
 /* Timeline CSS Start*/
-.storiey_timeline {
+.stories_timeline {
   width: 100%;
   position: relative;
 }
@@ -12736,17 +12752,17 @@ small, .small {
 
 .card {
   position: relative;
-  border: 4px solid #fcf7d8;
-  border-radius: 1rem;
+  /* border: 4px solid #fcf7d8; */
+  /* border-radius: 1rem; */
   display: grid;
   place-content: center;
-  background-color: #E5E1C7;
+  background-color: #fff;
   color: #15928A;
   font-size: 1.5rem;
   height: fit-content;
-  width: fit-content;
-  padding: 1rem;
-  box-shadow: 0px 8px 13px 1px #99999930
+  min-width: 300px;
+  padding: 1rem .6rem;
+  box-shadow: 3px 6px 13px 1px #00000057;
 }
 
 
@@ -12759,11 +12775,11 @@ small, .small {
   }
 }
 .card-title {
-  color: #8E4F24 !important;
+  color: #22544E !important;
   font-family: var(--font-secondary);
   font-weight: 600;
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: .8rem;
   letter-spacing: 1px;
   bottom: 0;
   z-index: 1;
@@ -12776,11 +12792,18 @@ p.card-text {
 .card-img-top {
   display: block;
   position: relative;
-  border-radius: 10px !important;
-  max-width: 200px;
-  box-shadow: 0px 13px 20px 1px #0000004f;
+  /* border-radius: 10px !important; */
+  /* max-width: 200px; */
+  /* box-shadow: 0px 13px 20px 1px #0000004f; */
   background: radial-gradient(circle, rgba(0, 0, 0, 0.7) 30%, rgba(0, 0, 0, 0) 80%);
 
+}
+.stories_timeline  .card-body{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: .2rem;
+  padding-bottom: 1.2rem;
 }
 
 /* 
@@ -13060,6 +13083,7 @@ z-index: 999; }
     font-size: 12px;
     text-align: justify;
     white-space: pre-wrap;
+    padding-bottom: .4rem;
 }
 .prod_price{
   font-size: 28px;
@@ -13168,231 +13192,6 @@ z-index: 999; }
   margin-right: 1rem;;
 }
 
-/* Steps------------------------- */
-/* @import "breakpoint";
- @import "susy";
- *, *:before, *:after {
-	 box-sizing: border-box;
-}
- html {
-	 font-family: 'Source Sans Pro', sans-serif;
-	 font-size: 100%;
-	 line-height: 1.5;
-}
- body {
-	 font-size: inherit;
-	 line-height: inherit;
-}
- .container {
-	 box-sizing: content-box;
-	 padding: 0 12px;
-	 max-width: 640px;
-	 margin: 48px auto;
-} */
- .step-list {
-	 margin: 0;
-	 padding: 0;
-	 list-style-type: none;
-}
- .step-list__item {
-	 counter-increment: step-counter;
-	 position: relative;
-}
- .step-list__item:before {
-	 content: counter(step-counter);
-	 font-weight: 300;
-	 color: #22544E;
-}
- .step-list__item h2 {
-	 font-size: 24px;
-	 line-height: 30px;
-	 font-weight: 300;
-}
- .step-list__item .icon {
-	 border-radius: 50%;
-	 display: flex;
-	 flex: 0 0 auto;
-   justify-content: center;
-   align-items: center;
-}
- .step-list__item .icon img {
-	 width: 70%;
-	 height: 70%;
-}
- .step-list__item .body {
-	 font-size: 12px;
-	 line-height: 18px;
-	 font-weight: 300;
-}
- .step-list__item .content {
-	 display: flex;
-	 flex-direction: row;
-	 padding-bottom: 18px;
-}
- .step-list__item:first-child .icon {
-	 background: #E5E1C7;
-}
- .step-list__item:nth-child(2) .icon {
-	 background: #E5E1C7;
-}
- .step-list__item:nth-child(3) .icon {
-	 background: #E5E1C7;
-}
- .step-list__item:nth-child(4) .icon {
-	 background: #E5E1C7;
-}
- .step-list__item:nth-child(5) .icon {
-	 background: #E5E1C7;
-}
- .step-list__item:nth-child(odd) .content {
-	 justify-content: flex-start;
-}
- .step-list__item:nth-child(even) .content {
-	 justify-content: flex-end;
-}
- .step-list__item:first-child > .step-list__item__inner:before {
-	 content: none;
-}
- .step-list__item:last-child > .step-list__item__inner:after {
-	 content: none;
-}
- .step-list__item + li {
-	 margin-top: 84px;
-}
- .step-list__item + li > div {
-	 margin-top: -1px;
-}
- @media screen and (max-width: 600px) {
-	 .step-list__item {
-		 display: flex;
-	}
-	 .step-list__item:before {
-		 content: counter(step-counter);
-		 position: relative;
-		 font-size: 36px;
-		 line-height: 42px;
-		 font-weight: 300;
-		 color: #B2986B;
-		 margin-right: 12px;
-	}
-	 .step-list__item .icon {
-		 order: 0;
-		 width: 36px;
-		 height: 36px;
-		 padding: 9px;
-		 position: absolute;
-		 left: -9px;
-		 top: 42px;
-	}
-	 .step-list__item .body {
-		 order: 1;
-		 margin-top: 8px;
-		 margin-left: 12px;
-	}
-	 .step-list__item .content {
-		 align-items: flex-start;
-	}
-	 .step-list__item .content:before {
-		 content: '';
-		 position: absolute;
-		 border-left: #22544E;
-		 height: 100%;
-		 left: 9px;
-		 bottom: 0;
-		 display: block;
-		 width: 1px;
-		 background: #22544E;
-		 top: 84px;
-	}
-	 .step-list__item:last-child .content:before {
-		 content: none;
-	}
-}
- @media screen and (min-width: 601px) {
-	 .step-list__item:before {
-		 content: counter(step-counter);
-		 position: absolute;
-		 font-size: 90px;
-		 line-height: 1;
-		 font-weight: 300;
-		 color: #22544E;
-	}
-	 .step-list__item .icon {
-		 width: 174px;
-		 height: 174px;
-		 padding: 48px;
-	}
-	 .step-list__item .body {
-		 flex: 0 1 33.3333%;
-		 margin-top: 84px;
-	}
-	 .step-list__item .content {
-		 align-items: flex-end;
-	}
-	 .step-list__item > .step-list__item__inner {
-		 position: relative;
-	}
-	 .step-list__item > .step-list__item__inner:before, .step-list__item > .step-list__item__inner:after {
-		 border-width: 0px;
-		 border-style: solid;
-		 border-color: #22544E;
-		 display: block;
-		 content: '';
-		 position: absolute;
-		 height: 42px;
-		 width: calc(33.3333% - 42px);
-	}
-	 .step-list__item:nth-child(odd) > .step-list__item__inner {
-		 text-align: right;
-	}
-	 .step-list__item:nth-child(odd) > .step-list__item__inner:before, .step-list__item:nth-child(odd) > .step-list__item__inner:after {
-		 border-left-width: 1px;
-		 left: calc(33.3333% - 21px);
-	}
-	 .step-list__item:nth-child(odd) > .step-list__item__inner:before {
-		 border-top-width: 1px;
-		 border-top-left-radius: 42px;
-		 margin-top: -42px;
-	}
-	 .step-list__item:nth-child(odd) > .step-list__item__inner:after {
-		 border-bottom-width: 1px;
-		 border-bottom-left-radius: 42px;
-		 margin-bottom: -42px;
-	}
-	 .step-list__item:nth-child(odd):before {
-		 left: 0;
-		 margin-left: 33.3333%;
-		 transform: translateX(-100%);
-	}
-	 .step-list__item:nth-child(odd) .icon {
-		 margin-left: 72px;
-	}
-	 .step-list__item:nth-child(even) > .step-list__item__inner:before, .step-list__item:nth-child(even) > .step-list__item__inner:after {
-		 border-right-width: 1px;
-		 right: calc(33.3333% - 21px);
-	}
-	 .step-list__item:nth-child(even) > .step-list__item__inner:before {
-		 border-top-width: 1px;
-		 border-top-right-radius: 42px;
-		 margin-top: -42px;
-	}
-	 .step-list__item:nth-child(even) > .step-list__item__inner:after {
-		 border-bottom-width: 1px;
-		 border-bottom-right-radius: 42px;
-		 margin-bottom: -42px;
-	}
-	 .step-list__item:nth-child(even):before {
-		 right: 0;
-		 margin-right: 33.3333%;
-		 transform: translateX(100%);
-	}
-	 .step-list__item:nth-child(even) .icon {
-		 margin-right: 72px;
-	}
-	 .step-list__item:nth-child(even) .body {
-		 order: 1;
-	}
-}
 
 .footer{
   background-color: #fff!important;
@@ -13432,4 +13231,25 @@ line-height: normal;
   line-height: normal;
     font-size: 14px;
     padding-left: .6rem;
+}
+
+#myBtn{
+  padding: .3rem 0.8rem !important;
+}
+
+/* How it works */
+.hiw_bg{
+  background-image:  url("../img/general/hiw_bg.png");
+  background-size: cover;
+  background-position: bottom;
+}
+.hiw_content h2{
+  margin-bottom: 0;
+  color: #fff;
+  font-size: 4rem;
+}
+.hiw_content p{
+  color: #fff;
+margin-top: 0;
+font-size: 1.1rem;
 }
