--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@
  * ==========================================================================
  * ==========================================================================
  */
- /* @font-face {
+ @font-face {
   font-family: 'Cochin', serif;
   src: local('') url(../HTML/fonts/Cochin/CochinLTStd.ttf) format(ttf);
 }
@@ -140,13 +140,25 @@
   src: local('') url(/HTML/fonts/Falidasi-Triasie-Font/normal.otf) format(otf);
 }
  @font-face {
-  font-family: 'Minerva Modern' , serif;
-  src: local('') url(/HTML/fonts/minerva-modern/Bold.ttf) format(ttf);
-} */
+  font-family: 'Minerva Modern',serif;
+  font-style: normal;
+  src: local('/fonts/minerva-modern/Black.ttf') url("/fonts/minerva-modern/Black.ttf") format(ttf);
+}
+
+.minerva-font{
+  font-family: 'Minerva Modern'!important;
+  font-weight: normal!important;
+
+}
+.cochin-font{
+  letter-spacing: 2px;
+  font-family: 'Cochin', serif!important;
+  font-weight: normal!important;
+}
 :root {
   /* Fonts */
   --font-primary: "Raleway", sans-serif;
-  --font-secondary: "Cinzel", serif;
+  --font-secondary:  'Minerva Modern',serif;
 
   /* Colors */
   --color-dark-1: #22544E;
@@ -798,6 +810,7 @@ a:hover {
 .button_bordered.button_accent {
   border-color: var(--color-accent);
   color: var(--color-accent);
+  background: transparent;
 }
 
 
@@ -12720,9 +12733,6 @@ small, .small {
   z-index: 2;
 }
 
-.bg-img {
-  background-image: url("../img/general/stories-bg-img.png");
-}
 
 .tagline-bg, .scene {
   background-size: contain;
@@ -12743,7 +12753,7 @@ small, .small {
   grid-column: center-start / -1;
   display: grid;
   grid-auto-flow: column;
-  gap: 4rem;
+  gap: 8rem;
   overflow: auto;
   overflow-y: hidden;
   padding: 2rem 4rem;
@@ -12756,7 +12766,7 @@ small, .small {
   /* border-radius: 1rem; */
   display: grid;
   place-content: center;
-  background-color: #fff;
+  background-color: #F9F5E4;
   color: #15928A;
   font-size: 1.5rem;
   height: fit-content;
@@ -12766,14 +12776,7 @@ small, .small {
 }
 
 
-@keyframes rotateWheel {
-  from {
-      transform: rotate(0deg);
-  }
-  to {
-      transform: rotate(360deg);
-  }
-}
+
 .card-title {
   color: #22544E !important;
   font-family: var(--font-secondary);
@@ -12792,11 +12795,22 @@ p.card-text {
 .card-img-top {
   display: block;
   position: relative;
-  /* border-radius: 10px !important; */
-  /* max-width: 200px; */
-  /* box-shadow: 0px 13px 20px 1px #0000004f; */
+  width: 378px;
+  height: 250px;
+  object-fit: cover;
   background: radial-gradient(circle, rgba(0, 0, 0, 0.7) 30%, rgba(0, 0, 0, 0) 80%);
 
+}
+.stories-timline-bg{
+  background-image: url("../img/general/stories-timline-bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.stories_bg{
+  background-color: #91855f47;
+  border-top: 2px solid #cdb68f;
+  border-bottom: 2px solid #cdb68f;
 }
 .stories_timeline  .card-body{
   display: flex;
@@ -12805,83 +12819,6 @@ p.card-text {
   padding-top: .2rem;
   padding-bottom: 1.2rem;
 }
-
-/* 
-.timelinebg {
-  position: absolute;
-    width: -webkit-fill-available;
-    background: #ffb900;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-} */
-.container-tmln {
-  position: absolute;
-  width: -webkit-fill-available;
-  /* background: #ffb900; */
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 77vh;
-  width: 100vw;
-  overflow: hidden;
-  mask-image: linear-gradient(
-    90deg,
-    transparent,
-    #fff 25%,
-    #fff 75%,
-    transparent
-  );
-}
-
-.dashed_line {
-  display: block;
-  position: relative;
-  width: 10px;
-  height: 100%;
-  /* background-color:#8E4F24; */
-  border-right: 1px dashed #8e4e2457;
-}
-
-.dashed_line::after {
-  content: "";
-  border-width: 0 1 0 0;
-  border-color: #ccc;
-  border-style: none;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  box-sizing: border-box;
-  left: 0px;
-  top: 0px;
-  border-radius: inherit;
-  pointer-events: none;
-}
-
-
-
-.scroll-parent {
-  position: relative;
-  width: 100vw;
-  height: inherit;
-  padding: 2rem 0;
-  overflow-x: hidden;
-}
-
-.scroll-element {
-  width: inherit;
-  height: inherit;
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-
 
 .primary {
   animation: primary 50s linear infinite;
@@ -13094,6 +13031,9 @@ z-index: 999; }
 
 /* FAQ------------------------------------------------------------------------------ */
 /* @import url('https://fonts.googleapis.com/css?family=Hind:300,400&display=swap'); */
+.h-85vh{
+  height: 100vh!important;
+}
 
  .accordion .accordion-item {
   font-family: var(--font-primary)!important;
@@ -13165,7 +13105,8 @@ z-index: 999; }
 }
  .accordion button[aria-expanded='true'] + .accordion-content {
 	 opacity: 1;
-	 max-height: 9em;
+	 max-height: max-content;
+	 /* max-height: 9em; */
 	 transition: all 200ms linear;
 	 will-change: opacity, max-height;
 }
@@ -13239,7 +13180,7 @@ line-height: normal;
 
 /* How it works */
 .hiw_bg{
-  background-image:  url("../img/general/hiw_bg.png");
+  background-image:  url("../img/general/hiw_bg.jpg");
   background-size: cover;
   background-position: bottom;
 }
@@ -13252,4 +13193,65 @@ line-height: normal;
   color: #fff;
 margin-top: 0;
 font-size: 1.1rem;
+}
+/* Why Stories Matter? */
+.wsm-bg{
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 32%, rgba(224,218,190,1) 60%, rgba(224,218,190,1) 100%);
+}
+/* About US */
+.about_bg-img{
+  background-image:  url("../img/general/hiw_bg.png");
+  background-size: cover;
+  background-position: bottom;
+}
+.aboutus_text::after{
+  content: '';
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  /* background-color: #22544E; */
+  z-index: -1;
+  right: -64px;
+  bottom: -64px;
+  z-index: 1;
+
+}
+.green-box {
+  position: absolute;
+  right: -64px;
+  bottom: -64px;
+  width: 420px;
+  height: 420px;
+  background: #005051;
+  z-index: 0;
+}
+
+.aboutus_text {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color:#e0dabe;
+  color: #22544E;
+}
+.aboutus_text{
+box-shadow:7px 8px 14px #00000047;
+}
+
+.about_us_content img{
+  padding-top: 1rem;
+  width: 50%;
+}
+.about_us_content span{
+  font-size: .6rem;
+  padding-bottom: 1rem;
+}
+.about_us_content p{
+  padding: 1rem;
+  text-align: center;
+  color: #22544E;
+  font-size: .8rem;
+
 }
