--- a/css/main.css
+++ b/css/main.css
@@ -127,43 +127,48 @@
  * ==========================================================================
  * ==========================================================================
  */
- @font-face {
+@font-face {
   font-family: 'Cochin', serif;
   src: local('') url(../HTML/fonts/Cochin/CochinLTStd.ttf) format(ttf);
 }
+
 @font-face {
- font-family:'EngraversGothic BT' , serif;
- src: local('EngraversGothic BT') url(/HTML/fonts/Engravers_gothic/Regular.ttf) format(otf);
+  font-family: 'EngraversGothic BT', serif;
+  src: local('EngraversGothic BT') url(/HTML/fonts/Engravers_gothic/Regular.ttf) format(otf);
 }
- @font-face {
-  font-family:'Falidasi' , serif;
+
+@font-face {
+  font-family: 'Falidasi', serif;
   src: local('') url(/HTML/fonts/Falidasi-Triasie-Font/normal.otf) format(otf);
 }
- @font-face {
-  font-family: 'Minerva Modern',serif;
+
+@font-face {
+  font-family: 'Minerva Modern', serif;
   font-style: normal;
   src: local('/fonts/minerva-modern/Black.ttf') url("/fonts/minerva-modern/Black.ttf") format(ttf);
 }
 
-.minerva-font{
-  font-family: 'Minerva Modern'!important;
-  font-weight: normal!important;
+.minerva-font {
+  font-family: 'Minerva Modern' !important;
+  font-weight: normal !important;
 
 }
-.cochin-font{
+
+.cochin-font {
   letter-spacing: 2px;
-  font-family: 'Cochin', serif!important;
-  font-weight: normal!important;
+  font-family: 'Cochin', serif !important;
+  font-weight: normal !important;
 }
+
 :root {
   /* Fonts */
   --font-primary: "Raleway", sans-serif;
-  --font-secondary:  'Minerva Modern',serif;
+  --font-secondary: 'Minerva Modern', serif;
 
   /* Colors */
   --color-dark-1: #22544E;
-  --color-accent:#8E4F24;
-  --color-white:#ffffff;
+  --color-accent: #8E4F24;
+  --color-white: #ffffff;
   --color-dark-2: #262626;
   --color-dark-3: #333333;
   --color-dark-4: #555555;
@@ -525,9 +530,10 @@ a:hover {
 /*!========================================================================
  * 3. Backgrounds
  * ======================================================================!*/
- .text-white{
-  color: var(--color-white)!important;
- }
+.text-white {
+  color: var(--color-white) !important;
+}
+
 .bg-dark-1 {
   background-color: var(--color-dark-1) !important;
 }
@@ -807,6 +813,7 @@ a:hover {
   border-color: var(--color-dark-1);
   color: var(--color-dark-1);
 }
+
 .button_bordered.button_accent {
   border-color: var(--color-accent);
   color: var(--color-accent);
@@ -822,6 +829,7 @@ a:hover {
   background-color: var(--color-dark-1);
   color: #fff;
 }
+
 .button_solid.button_accent {
   border-color: var(--color-accent);
   background-color: var(--color-accent);
@@ -12699,6 +12707,7 @@ small, .small {
 .bg-neutral-2 {
   background-color: #E5E1C7 !important;
 }
+
 .bg-neutral-3 {
   background-color: #F9F5E4 !important;
 }
@@ -12722,6 +12731,7 @@ small, .small {
 .text-neutral-2 {
   color: #E5E1C7 !important;
 }
+
 .text-neutral-3 {
   color: #F9F5E4 !important;
 }
@@ -12801,18 +12811,21 @@ p.card-text {
   background: radial-gradient(circle, rgba(0, 0, 0, 0.7) 30%, rgba(0, 0, 0, 0) 80%);
 
 }
-.stories-timline-bg{
+
+.stories-timline-bg {
   background-image: url("../img/general/stories-timline-bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-.stories_bg{
+
+.stories_bg {
   background-color: #91855f47;
   border-top: 2px solid #cdb68f;
   border-bottom: 2px solid #cdb68f;
 }
-.stories_timeline  .card-body{
+
+.stories_timeline .card-body {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12852,30 +12865,31 @@ p.card-text {
 
 /* Modal */
 
-.modal::-webkit-scrollbar, .right-image::-webkit-scrollbar,.cards-wrapper::-webkit-scrollbar {
+.modal::-webkit-scrollbar, .right-image::-webkit-scrollbar, .cards-wrapper::-webkit-scrollbar {
   width: 8px;
   height: 10px;
 }
 
-.modal::-webkit-scrollbar-thumb, .right-image::-webkit-scrollbar-thumb,.cards-wrapper::-webkit-scrollbar-thumb {
+.modal::-webkit-scrollbar-thumb, .right-image::-webkit-scrollbar-thumb, .cards-wrapper::-webkit-scrollbar-thumb {
   background-color: #B2986B;
   border-radius: 50px;
   height: 10px;
 }
 
-.modal::-webkit-scrollbar-track, .right-image::-webkit-scrollbar-track,.cards-wrapper::-webkit-scrollbar-track {
+.modal::-webkit-scrollbar-track, .right-image::-webkit-scrollbar-track, .cards-wrapper::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px #B2986B;
   height: 5px;
   border-radius: 50px;
 }
 
-.modal{
+.modal {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: (20px);
   opacity: 0;
   display: none;
   transform: scale(1.1);
@@ -12905,39 +12919,77 @@ p.card-text {
 
 .left-content {
   padding: 1rem;
-  width: 50%;
+  width: 60%;
   background: #E5E1C7;
   border-radius: .6rem 0 0 .6rem;
+  line-height: 1.1;
+    letter-spacing: -1px;
+    height: inherit;
 }
 
 .right-image img {
   margin: 8px 0;
   border-radius: 1rem;
-  box-shadow: 0px 8px 10px 1px #00000070;}
+  box-shadow: 0px 8px 10px 1px #00000070;
+}
 
 .right-image {
-  height: auto;
+  height: inherit;
   overflow-y: scroll;
   padding: 1rem;
-  width: 50%;
+  width: 40%;
   background: #E5E1C7;
   border-radius: 0 .6rem .6rem 0;
 }
-#popup-title{
-  color: #8E4F24!important;
+
+#popup-title {
+  color: #8E4F24 !important;
   /* font-family: 'Cochin'; */
   /* font-family:'EngraversGothiDates';
   font-family:Falidasi; */
   /* font-family:'Minerva Modern' , serif; */
- 
+
 }
-#popup-description{
-  color: #8E4F24!important;
+
+#popup-description {
+  color: #8E4F24 !important;
+  
   /* font-family: 'Minerva Modern' , serif; */
 }
-.popup.show { opacity: 1; transform: translate(-50%, -50%) scale(1); }
-.typing-container { display: inline; font-size: 16px; white-space: pre-wrap; }
-.letter { opacity: 0; display: inline-block; transform: translateY(5px); transition: opacity 0.1s ease-out, transform 0.1s ease-out; }
+
+.popup.show {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+
+}
+
+.typing-container {
+  font-family: 'Cochin', serif;
+  display: inline;
+  letter-spacing: .5px;
+  font-size: 14px;
+  /* font-family: 'Courier New', monospace; */
+  white-space: pre-wrap;
+  overflow: hidden;
+  border-right: 2px solid #005051;
+  animation: caret 1s step-end infinite;
+  height: auto;
+  overflow-wrap: break-word;
+  overflow-y: auto;
+  max-height: 60vh;
+  line-height: 1;
+}
+@keyframes caret {
+  100% { border-color: transparent; }
+}
+
+.letter {
+  opacity: 0;
+  display: inline-block;
+  transform: translateY(5px);
+  transition: opacity 0.1s ease-out, transform 0.1s ease-out;
+}
+
 /* #body{
   font-family: 'Cochin', serif;
   color: #262626!important;
@@ -12960,20 +13012,30 @@ p.card-text {
 
 .close-button {
   position: absolute;
-  right: 18px;
-  width: 1.5rem;
-  line-height: 1.5rem;
+  right: 7px;
+  right: -20px;
+  top: -14px;
+  width: 2.5rem;
+  line-height: normal;
   text-align: center;
   cursor: pointer;
-  border-radius: 0.25rem;
-  background-color: lightgray;
+  border-radius:100vmax;
+  background-color: #34625d;
+  color: white!important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2.5rem;
+  border: 2px solid #e5e1c7;
+  transition: .3s;
 }
 
 .close-button:hover {
-  background-color: darkgray;
+  transition: .3s;
+  background-color: #213f3c;
 }
 
-.popup::after{
+.popup::after {
   content: '';
   position: absolute;
   background-color: rgba(0, 0, 0, 0.459);
@@ -12987,12 +13049,14 @@ p.card-text {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   z-index: -2;
-  
+
 }
-.no-scroll { 
-  height: 100vh; 
+
+.no-scroll {
+  height: 100vh;
   overflow: hidden;
-z-index: 999; }
+  z-index: 999;
+}
 
 .popup {
   z-index: 99;
@@ -13014,15 +13078,16 @@ z-index: 999; }
 }
 
 /* Product--------------------------------------------------------------- */
-.product_desc{
+.product_desc {
   margin: 0;
-    font-weight: 200;
-    font-size: 12px;
-    text-align: justify;
-    white-space: pre-wrap;
-    padding-bottom: .4rem;
+  font-weight: 200;
+  font-size: 12px;
+  text-align: justify;
+  white-space: pre-wrap;
+  padding-bottom: .4rem;
 }
-.prod_price{
+
+.prod_price {
   font-size: 28px;
   color: #fff;
   font-family: math;
@@ -13031,114 +13096,130 @@ z-index: 999; }
 
 /* FAQ------------------------------------------------------------------------------ */
 /* @import url('https://fonts.googleapis.com/css?family=Hind:300,400&display=swap'); */
-.h-85vh{
-  height: 100vh!important;
+.h-85vh {
+  height: 100vh !important;
 }
 
- .accordion .accordion-item {
-  font-family: var(--font-primary)!important;
-	 border-bottom: 1px solid #e5e5e5;
+.accordion .accordion-item {
+  font-family: var(--font-primary) !important;
+  border-bottom: 1px solid #e5e5e5;
 }
- .accordion .accordion-item button[aria-expanded='true'] {
-	 border-bottom: 1px solid #22544E;
+
+.accordion .accordion-item button[aria-expanded='true'] {
+  border-bottom: 1px solid #22544E;
 }
- .accordion button {
-	 position: relative;
-	 display: block;
-	 text-align: left;
-	 width: 100%;
-	 padding: 1em 0;
-	 color: #B2986B;
-	 font-size: 1.15rem;
-	 font-weight: 400;
-	 border: none;
-	 background: none;
-	 outline: none;
+
+.accordion button {
+  position: relative;
+  display: block;
+  text-align: left;
+  width: 100%;
+  padding: 1em 0;
+  color: #B2986B;
+  font-size: 1.15rem;
+  font-weight: 400;
+  border: none;
+  background: none;
+  outline: none;
 }
- .accordion button:hover, .accordion button:focus {
-	 cursor: pointer;
-	 color: #22544E;
+
+.accordion button:hover, .accordion button:focus {
+  cursor: pointer;
+  color: #22544E;
 }
- .accordion button:hover::after, .accordion button:focus::after {
-	 cursor: pointer;
-	 color: #22544E;
-	 border: 1px solid #22544E;
+
+.accordion button:hover::after, .accordion button:focus::after {
+  cursor: pointer;
+  color: #22544E;
+  border: 1px solid #22544E;
 }
- .accordion button .accordion-title {
-	 padding: 1em 1.5em 1em 0;
+
+.accordion button .accordion-title {
+  padding: 1em 1.5em 1em 0;
 }
- .accordion button .icon {
-	 display: inline-block;
-	 position: absolute;
-	 top: 30px;
-	 right: 0;
-	 width: 22px;
-	 height: 22px;
-	 border: 1px solid;
-	 border-radius: 22px;
+
+.accordion button .icon {
+  display: inline-block;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  width: 22px;
+  height: 22px;
+  border: 1px solid;
+  border-radius: 22px;
 }
- .accordion button .icon::before {
-	 display: block;
-	 position: absolute;
-	 content: '';
-	 top: 9px;
-	 left: 5px;
-	 width: 10px;
-	 height: 2px;
-	 background: currentColor;
+
+.accordion button .icon::before {
+  display: block;
+  position: absolute;
+  content: '';
+  top: 9px;
+  left: 5px;
+  width: 10px;
+  height: 2px;
+  background: currentColor;
 }
- .accordion button .icon::after {
-	 display: block;
-	 position: absolute;
-	 content: '';
-	 top: 5px;
-	 left: 9px;
-	 width: 2px;
-	 height: 10px;
-	 background: currentColor;
+
+.accordion button .icon::after {
+  display: block;
+  position: absolute;
+  content: '';
+  top: 5px;
+  left: 9px;
+  width: 2px;
+  height: 10px;
+  background: currentColor;
 }
- .accordion button[aria-expanded='true'] {
-	 color: #22544E;
+
+.accordion button[aria-expanded='true'] {
+  color: #22544E;
 }
- .accordion button[aria-expanded='true'] .icon::after {
-	 width: 0;
+
+.accordion button[aria-expanded='true'] .icon::after {
+  width: 0;
 }
- .accordion button[aria-expanded='true'] + .accordion-content {
-	 opacity: 1;
-	 max-height: max-content;
-	 /* max-height: 9em; */
-	 transition: all 200ms linear;
-	 will-change: opacity, max-height;
+
+.accordion button[aria-expanded='true']+.accordion-content {
+  opacity: 1;
+  max-height: max-content;
+  /* max-height: 9em; */
+  transition: all 200ms linear;
+  will-change: opacity, max-height;
 }
- .accordion .accordion-content {
-	 opacity: 0;
-	 max-height: 0;
-	 overflow: hidden;
-	 transition: opacity 200ms linear, max-height 200ms linear;
-	 will-change: opacity, max-height;
+
+.accordion .accordion-content {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: opacity 200ms linear, max-height 200ms linear;
+  will-change: opacity, max-height;
 }
- .accordion .accordion-content p {
-	 font-size: 1rem;
-	 font-weight: 300;
-	 margin: 2em 0;
-   color: #22544E;
+
+.accordion .accordion-content p {
+  font-size: 1rem;
+  font-weight: 300;
+  margin: 2em 0;
+  color: #22544E;
 }
- 
+
 /* Feature-------------- */
-.featute li{
+.featute li {
   padding: 1rem 0;
   display: flex;
 }
-.featute li img{
-  margin-right: 1rem;;
+
+.featute li img {
+  margin-right: 1rem;
+  ;
 }
 
 
-.footer{
-  background-color: #fff!important;
+.footer {
+  background-color: #fff !important;
 }
+
 /* Packacges------------------------------ */
-.packages{
+.packages {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -13146,66 +13227,77 @@ z-index: 999; }
   background-color: #E5E1C7;
   padding: 1rem;
 }
-.package_header{
+
+.package_header {
   text-align: center;
 }
-.package_header span{
-line-height: normal;
+
+.package_header span {
+  line-height: normal;
 }
-.package_feature ul{
+
+.package_feature ul {
   min-height: 270px;
-  padding: 2rem 0 0rem 0 ;
-  
+  padding: 2rem 0 0rem 0;
+
 }
-.package_feature ul li{
+
+.package_feature ul li {
   list-style: none;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   padding: .2rem 0;
 }
-.package_feature ul li img{
+
+.package_feature ul li img {
   width: 20px;
   height: 20px;
 }
-.package_feature ul li span{
+
+.package_feature ul li span {
   line-height: normal;
-    font-size: 14px;
-    padding-left: .6rem;
+  font-size: 14px;
+  padding-left: .6rem;
 }
 
-#myBtn{
+#myBtn {
   padding: .3rem 0.8rem !important;
 }
 
 /* How it works */
-.hiw_bg{
-  background-image:  url("../img/general/hiw_bg.jpg");
+.hiw_bg {
+  background-image: url("../img/general/hiw_bg.jpg");
   background-size: cover;
   background-position: bottom;
 }
-.hiw_content h2{
+
+.hiw_content h2 {
   margin-bottom: 0;
   color: #fff;
   font-size: 4rem;
 }
-.hiw_content p{
+
+.hiw_content p {
   color: #fff;
-margin-top: 0;
-font-size: 1.1rem;
+  margin-top: 0;
+  font-size: 1.1rem;
 }
+
 /* Why Stories Matter? */
-.wsm-bg{
-  background: rgb(255,255,255);
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 32%, rgba(224,218,190,1) 60%, rgba(224,218,190,1) 100%);
+.wsm-bg {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 32%, rgba(224, 218, 190, 1) 60%, rgba(224, 218, 190, 1) 100%);
 }
+
 /* About US */
-.about_bg-img{
-  background-image:  url("../img/general/hiw_bg.png");
+.about_bg-img {
+  background-image: url("../img/general/hiw_bg.png");
   background-size: cover;
   background-position: bottom;
 }
-.aboutus_text::after{
+
+.aboutus_text::after {
   content: '';
   position: absolute;
   width: 400px;
@@ -13217,6 +13309,7 @@ font-size: 1.1rem;
   z-index: 1;
 
 }
+
 .green-box {
   position: absolute;
   right: -64px;
@@ -13233,22 +13326,25 @@ font-size: 1.1rem;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color:#e0dabe;
+  background-color: #e0dabe;
   color: #22544E;
 }
-.aboutus_text{
-box-shadow:7px 8px 14px #00000047;
+
+.aboutus_text {
+  box-shadow: 7px 8px 14px #00000047;
 }
 
-.about_us_content img{
+.about_us_content img {
   padding-top: 1rem;
   width: 50%;
 }
-.about_us_content span{
+
+.about_us_content span {
   font-size: .6rem;
   padding-bottom: 1rem;
 }
-.about_us_content p{
+
+.about_us_content p {
   padding: 1rem;
   text-align: center;
   color: #22544E;
