--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ body {
   min-width: 320px;
   font-family: var(--font-primary);
   font-size: 100%;
-  line-height: 2;
+  line-height: 1;
   color: var(--paragraph-color-dark);
   word-wrap: break-word;
 }
@@ -7796,6 +7796,8 @@ small, .small {
   line-height: 1.3;
   text-transform: uppercase;
   color: var(--color-gray-1);
+  font-family: 'Cochin', serif;
+
 }
 
 @media screen and (min-width: 320px) {
@@ -12756,16 +12758,40 @@ small, .small {
 .stories_timeline {
   width: 100%;
   position: relative;
+  /* width: 80%; */
+  overflow: hidden;
+  display: flex;
+}
+
+.cards-wrapper {
+  width: max-content;
+  display: flex;
+  animation: scroll 20s linear infinite;
+}
+
+
+.cards-wrapper:hover {
+  animation-play-state: paused;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-50%);
+  }
 }
 
 .cards-wrapper {
   padding: 1rem 5rem;
   grid-column: center-start / -1;
-  display: grid;
-  grid-auto-flow: column;
+  /* display: grid; */
+  /* grid-auto-flow: column; */
   gap: 8rem;
-  overflow: auto;
-  overflow-y: hidden;
+  /* overflow: auto;
+  overflow-y: hidden; */
   padding: 2rem 4rem;
   padding-right: var(--page-margin);
 }
@@ -12928,9 +12954,9 @@ p.card-text {
   /* background: #E5E1C7; */
   /* border-radius: .6rem 0 0 .6rem; */
   line-height: 1.1;
-    letter-spacing: -1px;
-    height: inherit;
-    
+  letter-spacing: -1px;
+  height: inherit;
+
 }
 
 .right-image img {
@@ -12959,7 +12985,7 @@ p.card-text {
 
 #popup-description {
   color: #8E4F24 !important;
-  
+
   /* font-family: 'Minerva Modern' , serif; */
 }
 
@@ -12985,8 +13011,11 @@ p.card-text {
   max-height: 60vh;
   line-height: 1;
 }
+
 @keyframes caret {
-  100% { border-color: transparent; }
+  100% {
+    border-color: transparent;
+  }
 }
 
 .letter {
@@ -13007,9 +13036,9 @@ p.card-text {
   line-height: normal;
   text-align: center;
   cursor: pointer;
-  border-radius:100vmax;
+  border-radius: 100vmax;
   background-color: #34625d;
-  color: white!important;
+  color: white !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13068,18 +13097,40 @@ p.card-text {
 /* Product--------------------------------------------------------------- */
 .product_desc {
   margin: 0;
+  margin-bottom: .2rem;
   font-weight: 200;
   font-size: 12px;
-  text-align: justify;
+  /* text-align: justify; */
   white-space: pre-wrap;
   padding-bottom: .4rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.5em;
+  max-height: 4.5em;
+
+  /* line-height * 3 */
 }
 
-.prod_price {
+.product_price {
+  display: flex;
+  flex-direction: column;
+  padding: .4rem 0;
+}
+
+.product_price span:nth-child(1) {
+  text-transform: capitalize;
+  color: #22544E;
+  font-size: 14px;
+
+}
+
+.product_price span:nth-child(2) {
   font-size: 28px;
-  color: #fff;
-  font-family: math;
-  font-weight: 200;
+  color: #22544E;
+  font-weight: 700;
 }
 
 /* FAQ------------------------------------------------------------------------------ */
@@ -13218,10 +13269,24 @@ p.card-text {
 
 .package_header {
   text-align: center;
+  font-family: 'Cochin', serif;
+
 }
 
 .package_header span {
-  line-height: normal;
+  line-height: 1 !important;
+  font-size: 14px;
+  font-family: 'Cochin', serif;
+
+}
+
+.package_price {
+  text-align: center;
+  font-family: 'Cochin', serif;
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #22544E;
+  padding: 1rem 0 0 0;
 }
 
 .package_feature ul {
@@ -13260,6 +13325,13 @@ p.card-text {
   background-position: bottom;
 }
 
+.hiw_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .hiw_content h2 {
   margin-bottom: 0;
   color: #fff;
@@ -13270,6 +13342,7 @@ p.card-text {
   color: #fff;
   margin-top: 0;
   font-size: 1.1rem;
+  text-align: center;
 }
 
 /* Why Stories Matter? */
@@ -13338,12 +13411,93 @@ p.card-text {
   color: #22544E;
   font-size: .8rem;
 }
-@media screen and (max-width: 600px) {
-  .figure-service__wrapper-bg{
-width: auto;
+
+.fab-buy-now-btn {
+  border: 1px solid #ccc;
+  color: #fff;
+  backdrop-filter: blur(8px);
+  background-color: #00000054;
+  position: absolute;
+  z-index: 999;
+  bottom: 16px;
+  right: 16px;
+  padding: .6rem .8rem;
+  border-radius: 100vmax;
+  font-size: .8rem;
+}
+
+.fab-buy-now-btn:hover {
+  border: 1px solid #22544E;
+  background-color: #22544E;
+  color: #fff;
+
+
+}
+
+.product_price {
+  display: flex;
+  flex-direction: column;
+}
+
+.quick_intro {
+  color: #888888;
+  margin-top: 0;
+}
+
+/* Media Query------------------------------------------------------------------------------------------------------------------------------------------------ */
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .figure-service__wrapper-bg {
+    width: auto;
   }
-  .back-video{
+
+  .back-video {
     height: 100vh;
     width: fit-content;
   }
 }
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+  .popup::after {
+    top: 80%;
+  }
+
+  .popup.show {
+    top: 38%;
+    left: 50%;
+    width: 90%;
+  }
+
+  .model-wrapper {
+    height: 80vh;
+    flex-direction: column-reverse;
+  }
+
+  .left-content, .right-image {
+    width: 100%;
+  }
+
+  .right-image {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    overflow-y: hidden;
+  }
+
+  .right-image img {
+    display: flex;
+    justify-content: space-between;
+    height: 150px;
+    margin: 1rem;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {}
