--- a/css/main.css
+++ b/css/main.css
@@ -3591,21 +3591,25 @@ div.wpcf7-validation-errors, div.wpcf7-acceptance-missing {
  * 35. Header Logo
  * ======================================================================!*/
 [data-arts-header-logo=primary] .logo__img-primary {
+  width: 180px;
   opacity: 1;
   visibility: visible;
 }
 
 [data-arts-header-logo=primary] .logo__img-secondary {
+  width: 180px;
   opacity: 0;
   visibility: hidden;
 }
 
 [data-arts-header-logo=secondary] .logo__img-primary {
+  width: 180px;
   opacity: 0;
   visibility: hidden;
 }
 
 [data-arts-header-logo=secondary] .logo__img-secondary {
+  width: 180px;
   opacity: 1;
   visibility: visible;
 }
