--- a/css/main.css
+++ b/css/main.css
@@ -13195,6 +13195,7 @@ p.card-text {
   text-overflow: ellipsis;
   line-height: 1.5em;
   max-height: 4.5em;
+  text-transform: capitalize;
 
   /* line-height * 3 */
 }
